集成 vuex、搭建 leftMenu 大体结构

--- a/src/styles/_mixins.styl
+++ b/src/styles/_mixins.styl
@@ -1,4 +1,4 @@
-func-font(color, size, weight)
+func-font(color, size = $font-size-md, weight = $font-size-n)
   color color
   font-size size
   font-weight weight
