--- a/src/styles/_varibles.styl
+++ b/src/styles/_varibles.styl
@@ -1,7 +1,7 @@
-$font-size-n = 400
-$font-size-sm = 500
-$font-size-md = 600
-$font-size-lg = 700
+$font-weight-n = 400
+$font-weight-sm = 500
+$font-weight-md = 600
+$font-weight-lg = 700
 
 $font-size-xs = 10px
 $font-size-sm = 12px
