--- a/src/styles/_mixins.styl
+++ b/src/styles/_mixins.styl
@@ -13,3 +13,10 @@ missing-corner(background = var(--body-bgcolor), size)
   background background
   background-size size
   background-repeat no-repeat
+
+absolute-center()
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
+  
