--- a/src/assets/fonts/_fonts.styl
+++ b/src/assets/fonts/_fonts.styl
@@ -1,6 +1,6 @@
 @font-face
     font-family 'Alibaba PuHuiTi'
-    src url('../assets/fonts/AlibabaPuHuiTi-Medium.woff2') format('woff2')
+    src url('./AlibabaPuHuiTi-Medium.woff2') format('woff2')
     font-weight 500
     font-style normal
     font-display swap
